fix layout bug

--- a/src/app/content/content.component.less
+++ b/src/app/content/content.component.less
@@ -5,7 +5,8 @@ html, body {
 
 .main {
   background-color: #f2f2f2;
-  min-height: 650px;
+  min-height: 1000px;
+  padding-bottom: 10%;
 }
 
 .main h1 {
